@@ -3,6 +3,8 @@
 	* tkchat.tcl (::tkchat::Retrieve): Bug #1030051. Be more careful
 	not to overwrite the current script if we fail to get something
 	sensible from the web request.
+	* tkchat.tcl (::tkchat::EditOptions): Added support for toplevel
+	alpha transparency (supported in the most recent Tk on Win2k/XP).
 
 2004-09-08  Kevin Kenny  <kennykb@acm.org>
 
